begin refactor of js

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <h1>Palette</h1>
 
       <div class='main'>
-        <button class='btn btn--history'>H</button>
         <div class='action'>
           <div class='action-container'>
             <div class='container video-container'>
                 <video></video>
+                <button><img src='static/images/tap.svg' alt='Take photo'></button>
             </div>
             <div class='container upload-container'>
               <input type='file' accept='image/*' id='imagefile' class='file-upload' name='imagefile'>
@@ -40,7 +40,7 @@
       </div>
 
       <div>
-        <canvas></canvas>
+        <canvas width='150' height='150'></canvas>
       </div>
 
       <div class='colour-info'>
