Non animation version

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
 
       <div class='colour-info'>
         <div class='colour-data'>
-          <div class='colour-rgb'>RGB</div>
+          <div class='sample-rgb'>RGB</div>
         </div>
-        <div class='colour-container'></div>
+        <div class='sample-container'></div>
         <div class='colour-actions'>
-          <div class='colour-hex'>HEX</div>
+          <div class='sample-hex'>HEX</div>
         </div>
       </div>
 
-      <div class='colours-container'><div class='colour'></div><div class='colour'></div><div class='colour'></div><div class='colour'></div><div class='colour'></div></div>
+      <div class='samples-container'></div>
 
       <div style='display: none;'>
         <button class='switch'>Switch</button>
