--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
       </div>
 
-      <div class='samples-container'></div>
+      <div class='samples-container'><div class='sample'></div><div class='sample'></div><div class='sample'></div><div class='sample'></div><div class='sample'></div></div>
 
       <div style='display: none;'>
         <button class='switch'>Switch</button>
