--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class='main'>
         <div class='action'>
           <div class='action-container'>
-            <div class='container video-container'>
+            <div class='container video-container' id='video-container'>
                 <video></video>
                 <button><img src='static/images/tap.svg' alt='Take photo'></button>
             </div>
@@ -47,13 +47,13 @@
         <div class='colour-data'>
           <div class='sample-rgb'>RGB</div>
         </div>
-        <div class='sample-container'></div>
+        <div class='sample-container' id='sample-container'></div>
         <div class='colour-actions'>
           <div class='sample-hex'>HEX</div>
         </div>
       </div>
 
-      <div class='samples-container'><div class='sample'></div><div class='sample'></div><div class='sample'></div><div class='sample'></div><div class='sample'></div></div>
+      <div class='samples-container'><div class='sample' id='sample-5'></div><div class='sample' id='sample-4'></div><div class='sample' id='sample-3'></div><div class='sample' id='sample-2'></div><div class='sample' id='sample-1'></div></div>
 
       <div style='display: none;'>
         <button class='switch'>Switch</button>
