sketch mockup, colour bar

--- a/index.html
+++ b/index.html
@@ -14,10 +14,21 @@
 
   <body>
 
-    <div class='outer'>
+    <header class='colour-bar'>
       <h1>Palette</h1>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </header>
 
+    <div class='outer'>
       <div class='main'>
+        <button class='btn btn--'>S</button>
         <div class='action'>
           <div class='action-container'>
             <div class='container video-container' id='video-container'>
@@ -40,7 +51,7 @@
       </div>
 
       <div>
-        <canvas width='150' height='150'></canvas>
+        <canvas width='200' height='200'></canvas>
       </div>
 
       <div class='colour-info'>
