--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class='container upload-container'>
               <input type='file' accept='image/*' id='imagefile' class='file-upload' name='imagefile'>
-              <label for="imagefile">Upload</label>
+              <label for="imagefile"><img src='static/images/file_upload.svg' alt='Upload'></label>
             </div>
             <div class='container input-container'>
               <form>
