--- a/index.html
+++ b/index.html
@@ -26,25 +26,23 @@
       <div></div>
     </header>
 
-    <div class='outer'>
+    <main>
       <div class='main'>
         <button class='btn btn--'>S</button>
         <div class='action'>
           <div class='action-container'>
             <div class='container video-container' id='video-container'>
                 <video></video>
-                <button><img src='static/images/tap.svg' alt='Take photo'></button>
+                <button><img src='static/images/touch_app.svg' alt='Take photo'></button>
             </div>
             <div class='container upload-container'>
               <input type='file' accept='image/*' id='imagefile' class='file-upload' name='imagefile'>
               <label for="imagefile"><img src='static/images/file_upload.svg' alt='Upload'></label>
             </div>
-            <div class='container input-container'>
-              <form>
-                <input type='text' name='colour'>
-                <button type='submit'>Go</button>
-              </form>
-            </div>
+            <form class='container input-container'>
+              <input type='text' name='colour' placeholder='#hex or r,g,b'>
+              <button class='btn' type='submit'><img src='static/images/arrow_downward.svg' alt='Go'></button>
+            </form>
           </div>
         </div>
         <button class='btn btn--source'>S</button>
@@ -76,9 +74,12 @@
           <input type='text' name='colour' value='' placeholder='hex colour'>
         </form>
       </div>
-    </div>
+    </main>
 
-    <script src='static/js/c0lor.js'></script>
+    <footer>
+      <a href='https://twitter.com/lamplightdev'>@lamplightdev</a> | <a href='https://github.com/lamplightdev/palette'>github</a>
+    </footer>
+
     <script src='static/js/app.js'></script>
   </body>
 
